--- a/resource/css/popup.css
+++ b/resource/css/popup.css
@@ -8,11 +8,27 @@ body {
 div.container#main {
 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: rgb(255, 69, 0);
+    background-image: linear-gradient(to bottom right, #ff7700, #ff7733);
     border: 5px solid black;
     border-radius: 1rem;
     text-align: center;
     padding: 0.5rem;
     color: white;
 
+}
+
+#heading {
+    margin-bottom: 0rem;
+}
+
+#subheading {
+    margin-top: 0rem;
+}
+
+#footer {
+    font-size: 0.75rem;
+}
+
+#github-link {
+    color: black;
 }
